--- a/src/content/chumps/2016-02-22-tour-bus.md
+++ b/src/content/chumps/2016-02-22-tour-bus.md
@@ -2,7 +2,8 @@
 name: Tour Bus
 name_slug: tour-bus
 date: 2016-02-22
-thanks: 
+date_chump: 1
+thanks: x
 url: https://web.archive.org/web/20160222023507/http://www.abc.net.au/news/2016-02-22/passengers-rescued-after-bus-crashes-into-melbourne-overpass/7188800
 image: /images/chumps/2016-02-22.jpg
 ---
